--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "react-color-palette": "^6.2.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -104,3 +104,4 @@
   },
   "proxy": "https://everest-backend.onrender.com"
 }
+
