craete rest api logique to get activity et filter coach

--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://everest-backend.onrender.com"
 }
 
